# molly

./: .gitignore  CMakeLists.txt  ast.h
src/: ast.c  ast.h  lexer.c  num_type.c  num_type.h  type.h
